# blog-app-flask

./: pyproject.toml
templates/: base.html  index.html
