[tool.poetry]
name = "blog-app-flask"
version = "0.1.0"
description = "A flask website for Blogs."
authors = ["Vishal Pandey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
